--- a/recipes/index.css
+++ b/recipes/index.css
@@ -8,15 +8,15 @@
 body {
     background-color:  var(--background-color);
     color: var(--random-color);
-    margin: auto;
+    margin: 0px 0px;
+}
+
+a {
+    color: var(--background-color);
 }
 
 h1 {
-    background-color: var(--random-color);
-    color: var(--background-color);
     text-align: center;
-    padding: 50px 50px;
-    margin-top: 0px;
 }
 
 h2 {
@@ -41,6 +41,22 @@ ul {
 
 li {
     padding: 5px;
+}
+
+header {
+    background-color: var(--random-color);
+    color: var(--background-color);
+    text-align: center;
+    padding: 50px 50px;
+    margin-top: 0px;
+}
+
+footer {
+    background-color: var(--random-color);
+    color: var(--background-color);
+    text-align: center;
+    padding: 25px 50px;
+    margin-top: 100px;
 }
 
 div.list-number-text {
@@ -68,7 +84,7 @@ div.flex-row {
     margin: 0px auto;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     div.flex-row {
         flex-direction: column;
     }
@@ -80,12 +96,4 @@ div.flex-column {
     justify-content: center;
     align-items: center;
     margin: 25px 50px;
-}
-
-footer {
-    background-color: var(--random-color);
-    color: var(--background-color);
-    text-align: center;
-    padding: 25px 50px;
-    margin-top: 100px;
 }
