--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
+:root {
+    --background-color: ghostwhite;
+}
+
 body {
-    background-color:  ghostwhite;
+    background-color:  var(--background-color);
     color: rosybrown;
     font-family: monospace;
     margin: auto;
@@ -7,19 +11,16 @@ body {
 
 h1 {
     text-align: center;
-    padding: 50px 50px;
-    margin: 0px auto;
 }
 
 h2 {
-    color: rosybrown;
     text-align: center;
-    margin: auto;
+    margin-bottom: 0px;
 }
 
 a {
     background-color: rosybrown;
-    color: ghostwhite;
+    color: var(--background-color);
     text-decoration: none;
     text-align: center;
     border-radius: 5px;
@@ -47,6 +48,16 @@ hr {
     margin: 0px auto;
 }
 
+button.theme {
+    background-color: rosybrown;
+    color: var(--background-color);
+    font-family: monospace;
+    border: none;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+}
+
 div.categories {
     display: flex;
     flex-direction: column;
@@ -61,6 +72,12 @@ div.links {
     justify-content: center;
     align-items: center;
     margin: 25px 50px 100px 50px;
+}
+
+header {
+    text-align: center;
+    padding: 50px 50px;
+    margin-top: 0px;
 }
 
 footer {
