--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
     background-color:  var(--background-color);
     color: rosybrown;
     font-family: monospace;
-    margin: auto;
+    margin: 0px;
 }
 
 h1 {
@@ -15,7 +15,6 @@ h1 {
 
 h2 {
     text-align: center;
-    margin-bottom: 0px;
 }
 
 a {
@@ -24,10 +23,8 @@ a {
     text-decoration: none;
     text-align: center;
     border-radius: 5px;
-    min-width: 100px;
+    width: 80%;
     padding: 10px;
-    margin: 10px;
-    transition: ease-out 0.3s;
 }
 
 a:link {
@@ -39,7 +36,19 @@ a:visited {
 }
 
 a:hover {
-    box-shadow: 10px 0px 0px 0px orange;
+    animation: jiggle 0.20s 1;
+}
+
+@keyframes jiggle {
+  25% {
+    transform: translateX(2px);
+  }
+  75% {
+    transform: translateX(-2px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
 
 hr {
@@ -63,7 +72,9 @@ div.categories {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 25px 50px 100px 50px;
+    width: 80%;
+    max-width: 800px;
+    margin: 25px auto 100px;
 }
 
 div.links {
@@ -71,13 +82,14 @@ div.links {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 25px 50px 100px 50px;
+    width: 100%;
+    gap: 25px;
+    margin-bottom: 50px;
 }
 
 header {
     text-align: center;
-    padding: 50px 50px;
-    margin-top: 0px;
+    padding: 50px;
 }
 
 footer {
