Experimenting with HTML, CSS, and JS.

--- a/index.css
+++ b/index.css
@@ -27,6 +27,10 @@ a {
     padding: 10px;
 }
 
+a::selection {
+    background-color: transparent;
+}
+
 a:link {
     background-color: rosybrown;
 }
