Experimenting with HTML, CSS, and JS.

--- a/recipes/index.css
+++ b/recipes/index.css
@@ -1,5 +1,5 @@
 :root {
-    --background-color: white;
+    --background-color: ghostwhite;
     --random-color: black;
     --text-color: black;
     font-family: monospace;
