--- a/recipes/index.css
+++ b/recipes/index.css
@@ -85,6 +85,7 @@ div.flex-row {
 @media screen and (max-width: 600px) {
     div.flex-row {
         flex-direction: column;
+        align-items: center;
     }
 }
 
