--- a/index.css
+++ b/index.css
@@ -1,24 +1,29 @@
 :root {
     --background-color: ghostwhite;
+    --text-color: black;
+    --link-color: hsl(300, 25%, 80%);
+    --visited-color: hsl(260, 25%, 75%);
 }
 
 body {
     background-color:  var(--background-color);
-    color: rosybrown;
+    color: var(--visited-color);
     font-family: monospace;
     margin: 0px;
 }
 
 h1 {
+    color: var(--text-color);
     text-align: center;
 }
 
 h2 {
+    color: var(--text-color);
     text-align: center;
 }
 
 a {
-    color: var(--background-color);
+    color: var(--text-color);
     text-decoration: none;
     text-align: center;
     border-radius: 5px;
@@ -28,11 +33,11 @@ a {
 }
 
 a:link {
-    background-color: rosybrown;
+    background-color: var(--link-color);
 }
 
 a:visited {
-    background-color: thistle;
+    background-color: var(--visited-color);
 }
 
 a:hover {
@@ -52,14 +57,14 @@ a:hover {
 }
 
 hr {
-    border: 1px solid rosybrown;
+    border: 1px solid var(--text-color);
     width: 98%;
     margin: 0px auto;
 }
 
 button.theme {
-    background-color: rosybrown;
-    color: var(--background-color);
+    background-color: var(--visited-color);
+    color: var(--text-color);
     font-family: monospace;
     border: none;
     border-radius: 5px;
@@ -97,6 +102,7 @@ header {
 }
 
 footer {
+    color: var(--text-color);
     text-align: center;
     padding: 25px 50px;
 }
