--- a/index.css
+++ b/index.css
@@ -63,8 +63,8 @@ hr {
 }
 
 button.theme {
-    background-color: var(--visited-color);
-    color: var(--text-color);
+    background-color: var(--text-color);
+    color: var(--background-color);
     font-family: monospace;
     border: none;
     border-radius: 5px;
