--- a/recipes/index.css
+++ b/recipes/index.css
@@ -1,7 +1,7 @@
 :root {
-    --background-color: ghostwhite;
-    --random-color: black;
-    --text-color: black;
+    --background-color: hsl(240, 100%, 99%);
+    --color: hsl(0, 0%, 0%);
+    --random-color: hsl(0, 0%, 0%);
     font-family: monospace;
 }
 
@@ -30,14 +30,14 @@ h3 {
 }
 
 p {
-    color: var(--text-color);
+    color: var(--color);
     text-align: center;
     max-width: 1000px;
     margin: 0px 0px 20px;
 }
 
 ul {
-    color: var(--text-color);
+    color: var(--color);
     padding-left: 20px;
 }
 
