--- a/prints/index.css
+++ b/prints/index.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    background-color: var(--background-color);
     background-image: linear-gradient(to right, var(--gradient-color-01), var(--gradient-color-02));
     color: var(--color);
     margin: 0px;
