--- a/prints/index.css
+++ b/prints/index.css
@@ -6,77 +6,76 @@
     font-family: monospace;
 }
 
+:fullscreen {
+    background-color: var(--background-color);
+}
+
 body {
     background-color: var(--background-color);
     color: var(--color);
-    margin: 0px;
-}
-
-h1 {
-    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 25px;
-    text-align: center;
-    width: 80%;
-    max-width: 800px;
-    padding: 50px 0px;
-    margin: 0px auto;
-}
-
-h2 {
-    text-align: center;
-}
-
-p {
-    text-align: center;
-    max-width: 1000px;
-    margin: auto;
-    margin-bottom: 20px;
 }
 
 img {
-    display: block;
-    border-radius: 25px;
-    width: 80%;
-    margin: 0px auto
+    border-radius: 10px;
+    width: 70%;
 }
 
-img::backdrop {
-    background-color: var(--background-color);
-}
-
-div.image {
-    display: block;
-    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 25px;
-    width: 80%;
-    max-width: 800px;
-    padding: 50px 0px;
-    margin: 50px auto
-}
-
-div.description {
+div.row {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 25px;
-    width: 80%;
-    max-width: 800px;
-    padding: 25px 0px;
+    gap: 30px;
     margin: 50px auto;
 }
 
+div.column {
+    display: flex;
+    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: center;
+    flex: 33.33%;
+    max-width: 26.67%;
+    gap: 30px;
+    padding: 30px 0px 60px;
+}
+
 header {
-    padding: 50px 0px 0px;
+    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
+    border-radius: 10px;
+    text-align: center;
+    width: calc(80% + 60px);
+    padding: 15px 0px;
+    margin: 50px auto;
 }
 
 footer {
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 25px;
+    border-radius: 10px;
     text-align: center;
-    width: 80%;
-    max-width: 800px;
+    width: calc(80% + 60px);
     padding: 25px 0px;
     margin: 50px auto;
+}
+
+@media screen and (max-width: 1000px) {
+    div.column {
+        flex: 50%;
+        max-width: 40%;
+    }
+
+    header, footer {
+        width: calc(80% + 30px);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    div.column {
+        flex: 100%;
+        max-width: 80%;
+    }
+
+    header, footer {
+        width: 80%;
+    }
 }
