--- a/prints/index.css
+++ b/prints/index.css
@@ -15,46 +15,47 @@ body {
     color: var(--color);
 }
 
+h1 {
+    letter-spacing: 2px;
+}
+
+h2 {
+    letter-spacing: 2px;
+}
+
 img {
-    border: 3px solid var(--background-color);
-    border-radius: 10px;
-    width: 70%;
+    width: 100%;
 }
 
 div.row {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
+    gap: 15px;
     margin: 50px auto;
 }
 
 div.column {
     display: flex;
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 10px;
     flex-direction: column;
     align-items: center;
     flex: 33.33%;
     max-width: 26.67%;
-    gap: 30px;
-    padding: 30px 0px 60px;
 }
 
 header {
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 10px;
     text-align: center;
-    width: calc(80% + 60px);
+    width: 26.67%;
     padding: 15px 0px;
     margin: 50px auto;
 }
 
 footer {
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
-    border-radius: 10px;
     text-align: center;
-    width: calc(80% + 60px);
+    width: 26.67%;
     padding: 25px 0px;
     margin: 50px auto;
 }
@@ -66,7 +67,7 @@ footer {
     }
 
     header, footer {
-        width: calc(80% + 30px);
+        width: 40%;
     }
 }
 
