--- a/prints/index.css
+++ b/prints/index.css
@@ -6,21 +6,10 @@
     font-family: monospace;
 }
 
-:fullscreen {
-    background-color: var(--background-color);
-}
-
 body {
     background-color: var(--background-color);
     color: var(--color);
-}
-
-h1 {
-    letter-spacing: 2px;
-}
-
-h2 {
-    letter-spacing: 2px;
+    margin: 0px;
 }
 
 img {
@@ -39,7 +28,9 @@ div.column {
     display: flex;
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
     flex-direction: column;
+    justify-content: flex-end;
     align-items: center;
+    text-align: center;
     flex: 33.33%;
     max-width: 26.67%;
 }
@@ -47,7 +38,7 @@ div.column {
 header {
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
     text-align: center;
-    width: 26.67%;
+    width: calc(80% + 30px);
     padding: 15px 0px;
     margin: 50px auto;
 }
@@ -55,7 +46,7 @@ header {
 footer {
     background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
     text-align: center;
-    width: 26.67%;
+    width: calc(80% + 30px);
     padding: 25px 0px;
     margin: 50px auto;
 }
@@ -67,7 +58,7 @@ footer {
     }
 
     header, footer {
-        width: 40%;
+        width: calc(80% + 15px);
     }
 }
 
