--- a/tools/color-generator/color/index.css
+++ b/tools/color-generator/color/index.css
@@ -21,13 +21,38 @@ div.row {
 div.column {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     text-align: center;
-    flex: 25%;
-    gap: 8px;
-    max-width: 20%;
+    flex: 100%;
+    gap: 25px;
+    max-width: 80%;
     padding: 50px 0px;
+}
+
+div.color-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
+
+div.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    flex: auto;
+    gap: 5px;
+}
+
+div.marker {
+    position: relative;
+    height: 10px;
+    width: 10px;
 }
 
 header {
@@ -44,23 +69,15 @@ footer {
     margin: 50px auto;
 }
 
-@media screen and (max-width: 1800px) {
-    div.column {
-        flex: 33.33%;
-        max-width: 26.67%;
+@media screen and (max-width: 800px) {
+    div.color-row {
+        flex-direction: column;
     }
-}
 
-@media screen and (max-width: 1200px) {
-    div.column {
-        flex: 50%;
-        max-width: 40%;
-    }
-}
-
-@media screen and (max-width: 600px) {
-    div.column {
-        flex: 100%;
-        max-width: 80%;
+    div.item {
+        flex-direction: row;
+        flex: none;
+        height: 50px;
+        width: 100%;
     }
 }
