--- a/tools/color-generator/color/index.css
+++ b/tools/color-generator/color/index.css
@@ -30,6 +30,36 @@ div.column {
     padding: 50px 0px;
 }
 
+div.column-r {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex: 100%;
+    max-width: 80%;
+    padding: 0px 0px 100px;
+}
+
+div.color-row-r {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+}
+
+div.item-r {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    flex: auto;
+    gap: 5px;
+}
+
 div.color-row {
     display: flex;
     flex-direction: row;
@@ -79,5 +109,11 @@ footer {
         flex: none;
         height: 50px;
         width: 100%;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    div.column-r {
+        max-width: 800px;
     }
 }
