--- a/tools/color-generator/color/index.css
+++ b/tools/color-generator/color/index.css
@@ -99,21 +99,51 @@ footer {
     margin: 50px auto;
 }
 
-/* @media screen and (max-width: 800px) {
-    div.color-row {
-        flex-direction: column;
-    }
-
-    div.item {
-        flex-direction: row;
-        flex: none;
-        height: 50px;
-        width: 100%;
-    }
-} */
-
 @media screen and (min-width: 1000px) {
     div.column-r {
         max-width: 800px;
     }
+}
+
+div.slider {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 50%;
+    gap: 20px;
+}
+
+input[type=range].slider {
+    -webkit-appearance: none;
+    appearance: none;
+    background: #919191;
+    outline: none;
+    opacity: 0.8;
+    height: 20px;
+    width: 85%;
+    margin: 0px;
+}
+
+input[type=range].slider:hover {
+  opacity: 1;
+}
+
+input[type=range].slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: var(--color);
+    border-radius: 0px;
+    border: none;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+}
+
+input[type=range].slider::-moz-range-thumb {
+    background-color: var(--color);
+    border-radius: 0px;
+    border: none;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
 }
