--- a/tools/color-generator/color/index.css
+++ b/tools/color-generator/color/index.css
@@ -107,10 +107,12 @@ footer {
 
 div.slider {
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 50%;
-    gap: 20px;
+    width: 100%;
+    min-width: 300px;
+    max-width: 600px;
 }
 
 input[type=range].slider {
@@ -120,7 +122,7 @@ input[type=range].slider {
     outline: none;
     opacity: 0.8;
     height: 20px;
-    width: 85%;
+    width: 80%;
     margin: 0px;
 }
 
