--- a/tools/color-generator/color/index.css
+++ b/tools/color-generator/color/index.css
@@ -12,10 +12,10 @@ body {
 
 div.row {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-    gap: 15px;
-    margin: 50px auto;
+    align-items: center;
+    gap: 60px;
 }
 
 div.column {
@@ -23,19 +23,15 @@ div.column {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    gap: 25px;
+    gap: 20px;
     width: 80%;
     max-width: 1000px;
-    padding: 50px 0px;
 }
 
 div.color-row {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-    text-align: center;
     width: 100%;
 }
 
@@ -44,35 +40,30 @@ div.item {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100px;
     flex: auto;
     gap: 5px;
+    height: 100px;
 }
 
 div.marker {
-    position: relative;
     height: 10px;
     width: 10px;
 }
 
 header {
-    color: var(--color);
     text-align: center;
-    padding: 15px 0px;
-    margin: 50px auto;
+    margin: 80px auto;
 }
 
 footer {
-    color: var(--color);
     text-align: center;
-    padding: 25px 0px;
-    margin: 50px auto;
+    margin: 80px auto;
 }
 
 div.slider {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 100%;
     min-width: 300px;
@@ -82,10 +73,10 @@ div.slider {
 input[type=range].slider {
     -webkit-appearance: none;
     appearance: none;
-    background: #919191;
+    background-color: var(--color);
     outline: none;
     opacity: 0.8;
-    height: 20px;
+    height: 10px;
     width: 80%;
     margin: 0px;
 }
@@ -102,14 +93,14 @@ input[type=range].slider::-webkit-slider-thumb {
     border: none;
     cursor: pointer;
     height: 20px;
-    width: 20px;
+    width: 10px;
 }
 
 input[type=range].slider::-moz-range-thumb {
-    background-color: var(--color);
+    background-color: grey;
     border-radius: 0px;
     border: none;
     cursor: pointer;
     height: 20px;
-    width: 20px;
+    width: 10px;
 }
