--- a/tools/color-picker/index.css
+++ b/tools/color-picker/index.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    -webkit-tap-highlight-color: transparent;
     background-color: var(--background-color);
     color: var(--color);
     margin: 0px;
