--- a/tools/color-picker/index.css
+++ b/tools/color-picker/index.css
@@ -103,7 +103,7 @@ input[type=range].slider::-webkit-slider-thumb {
     appearance: none;
     background-color: var(--thumb);
     border-radius: 0px;
-    border: none;
+    border: 1px solid var(--color);
     height: 20px;
     width: 10px;
 }
@@ -111,7 +111,7 @@ input[type=range].slider::-webkit-slider-thumb {
 input[type=range].slider::-moz-range-thumb {
     background-color: var(--thumb);
     border-radius: 0px;
-    border: none;
+    border: 1px solid var(--color);
     height: 20px;
     width: 10px;
 }
