--- a/tools/color-picker/index.css
+++ b/tools/color-picker/index.css
@@ -12,6 +12,10 @@ body {
     margin: 0px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0px;
+}
+
 div.outer-column {
     display: flex;
     flex-direction: column;
@@ -25,7 +29,7 @@ div.inner-column {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
     width: 80%;
     max-width: 1000px;
 }
@@ -77,6 +81,7 @@ div.slider {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 15px;
     width: 100%;
     min-width: 300px;
     max-width: 600px;
