--- a/tools/color-picker/index.css
+++ b/tools/color-picker/index.css
@@ -120,3 +120,20 @@ input[type=range].slider::-moz-range-thumb {
     height: 20px;
     width: 10px;
 }
+
+div.copied {
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color);
+    color: var(--background-color);
+    opacity: 0;
+    height: 50px;
+    width: 300px;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    transition: 0.8s;
+}
