--- a/tools/color-picker/index.css
+++ b/tools/color-picker/index.css
@@ -34,6 +34,15 @@ div.inner-column {
     max-width: 1000px;
 }
 
+div.inner-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    max-width: 1000px;
+}
+
 div.color-row {
     display: flex;
     justify-content: center;
@@ -85,6 +94,29 @@ div.slider {
     width: 100%;
     min-width: 300px;
     max-width: 600px;
+}
+
+div.input-column {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+div.input-row {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+input[type=text].box {
+    background-color: var(--background-color);
+    font-family: monospace;
+    text-align: center;
+    border: 1px solid var(--color);
+    border-radius: 0px;
+    outline: none;
+    width: 40px;
+    padding: 4px 0px;
 }
 
 input[type=range].slider {
