--- a/games/rocks/index.css
+++ b/games/rocks/index.css
@@ -1,6 +1,6 @@
 :root {
-    --background-color: hsl(240, 100%, 99%);
-    --color: hsl(0, 0%, 0%);
+    --background-color: ghostwhite;
+    --color: black;
     font-family: monospace;
 }
 
