--- a/prints/index.css
+++ b/prints/index.css
@@ -1,8 +1,8 @@
 :root {
-    --background-color: hsl(240, 100%, 99%);
+    --background-color: ghostwhite;
     --color: black;
-    --gradient-color-01: hsl(240, 100%, 99%);
-    --gradient-color-02: hsl(0, 0%, 50%);
+    --gradient-start-color: darkgrey;
+    --gradient-end-color: dimgrey;
     font-family: monospace;
 }
 
@@ -26,7 +26,7 @@ div.row {
 
 div.column {
     display: flex;
-    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
+    background-image: linear-gradient(90deg, var(--gradient-start-color), var(--gradient-end-color));
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
@@ -36,7 +36,7 @@ div.column {
 }
 
 header {
-    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
+    background-image: linear-gradient(90deg, var(--gradient-start-color), var(--gradient-end-color));
     text-align: center;
     width: calc(80% + 30px);
     padding: 15px 0px;
@@ -44,7 +44,7 @@ header {
 }
 
 footer {
-    background-image: linear-gradient(90deg, var(--gradient-color-01), var(--gradient-color-02));
+    background-image: linear-gradient(90deg, var(--gradient-start-color), var(--gradient-end-color));
     text-align: center;
     width: calc(80% + 30px);
     padding: 25px 0px;
