--- a/tools/color-picker/index.css
+++ b/tools/color-picker/index.css
@@ -1,7 +1,7 @@
 :root {
     --background-color: ghostwhite;
     --color: black;
-    --thumb: darkgrey;
+    --thumb-color: darkgrey;
     font-family: monospace;
 }
 
@@ -146,7 +146,7 @@ input[type=range].slider:hover {
 input[type=range].slider::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    background-color: var(--thumb);
+    background-color: var(--thumb-color);
     border-radius: 0px;
     border: 1px solid var(--color);
     height: 20px;
@@ -154,7 +154,7 @@ input[type=range].slider::-webkit-slider-thumb {
 }
 
 input[type=range].slider::-moz-range-thumb {
-    background-color: var(--thumb);
+    background-color: var(--thumb-color);
     border-radius: 0px;
     border: 1px solid var(--color);
     height: 20px;
