--- a/recipes/index.css
+++ b/recipes/index.css
@@ -7,6 +7,16 @@
 
 body {
     background-color:  var(--background-color);
+    color: var(--color);
+    margin: 0px;
+}
+
+h1 {
+    color: var(--background-color);
+    margin: 0px;
+}
+
+h2, h3, h4, h5, h6 {
     color: var(--random-color);
     margin: 0px;
 }
@@ -16,83 +26,67 @@ a {
     color: var(--background-color);
 }
 
-h1 {
-    text-align: center;
-}
-
-h2 {
-    text-align: center;
-    margin-bottom: 0px;
-}
-
-h3 {
-    text-align: center;
-}
-
 p {
-    color: var(--color);
     text-align: center;
-    max-width: 1000px;
-    margin: 0px 0px 20px;
+    margin: 0px;
 }
 
 ul {
-    color: var(--color);
     padding-left: 20px;
+    margin: 0px;
 }
 
 li {
-    padding: 5px 0px;
+    padding: 5px;
 }
 
 header {
     background-color: var(--random-color);
-    color: var(--background-color);
     text-align: center;
-    padding: 50px 50px;
-    margin-top: 0px;
+    padding: 50px;
 }
 
 footer {
+    display: flex;
+    flex-direction: column;
     background-color: var(--random-color);
     color: var(--background-color);
     text-align: center;
+    gap: 20px;
     padding: 25px 50px;
-    margin-top: 100px;
 }
 
-div.li {
-    display: flex;
-}
-
-div.li .number {
-    display: inline-block;
-    min-width: 50px;
-}
-
-div.li .text {
-    display: inline-block;
-}
-
-div.flex-row {
+div.outter-row {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    width: fit-content;
-    margin: 0px auto;
+    width: 80%;
+    max-width: 600px;
+    margin: 75px auto;
+}
+
+div.inner-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+}
+
+div.outter-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    max-width: 800px;
+    margin: 75px auto;
 }
 
 @media screen and (max-width: 600px) {
-    div.flex-row {
+    div.outter-row {
         flex-direction: column;
         align-items: center;
+        gap: 75px;
     }
-}
-
-div.flex-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 25px 50px;
 }
