--- a/recipes/index.css
+++ b/recipes/index.css
@@ -11,14 +11,13 @@ body {
     margin: 0px;
 }
 
-h1 {
-    color: var(--background-color);
+h1, h2, h3, h4, h5, h6 {
+    color: var(--random-color);
     margin: 0px;
 }
 
-h2, h3, h4, h5, h6 {
-    color: var(--random-color);
-    margin: 0px;
+header h1, header h2 {
+    color: var(--background-color);
 }
 
 a {
@@ -41,8 +40,11 @@ li {
 }
 
 header {
+    display: flex;
+    flex-direction: column;
     background-color: var(--random-color);
     text-align: center;
+    gap: 40px;
     padding: 50px;
 }
 
@@ -51,7 +53,6 @@ footer {
     flex-direction: column;
     background-color: var(--random-color);
     color: var(--background-color);
-    text-align: center;
     gap: 20px;
     padding: 25px 50px;
 }
@@ -83,10 +84,61 @@ div.outter-column {
     margin: 75px auto;
 }
 
+div.servings-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    margin: 0px auto;
+}
+
+button {
+    background-color: var(--background-color);
+    border: none;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+}
+
+button.minus::before, button.plus::before {
+    position: absolute;
+    background-color: var(--random-color);
+    content: '';
+    height: 6px;
+    width: 24px;
+    transform: translate(-50%, -50%);
+}
+
+button.plus::after {
+    position: absolute;
+    background-color: var(--random-color);
+    content: '';
+    height: 24px;
+    width: 6px;
+    transform: translate(-50%, -50%);
+}
+
+button:hover {
+    animation: jiggle 0.20s 1;
+}
+
 @media screen and (max-width: 600px) {
     div.outter-row {
         flex-direction: column;
         align-items: center;
         gap: 75px;
     }
+}
+
+@keyframes jiggle {
+  25% {
+    transform: translateX(2px);
+  }
+  75% {
+    transform: translateX(-2px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
 }
