--- a/games/rocks/index.css
+++ b/games/rocks/index.css
@@ -15,6 +15,14 @@ body {
     margin: 0px;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0px;
+}
+
+h1 {
+    font-size: 40px;
+}
+
 canvas {
     position: absolute;
     outline: 1px solid var(--color);
@@ -40,6 +48,7 @@ div.buttons-column {
     position: absolute;
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: fit-content;
     gap: 20px;
 }
