--- a/games/rocks/index.css
+++ b/games/rocks/index.css
@@ -10,9 +10,11 @@
 }
 
 body {
+    -webkit-user-select: none;
     background-color: var(--background-color);
     color: var(--color);
     touch-action: none;
+    user-select: none;
     margin: 0px;
 }
 
