--- a/random/create-a-question/index.css
+++ b/random/create-a-question/index.css
@@ -12,11 +12,17 @@ body {
     margin: 0px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0px;
 }
 
-div.to-do h2, h4 {
+div.question h2,
+h4 {
     color: var(--background-color);
     word-wrap: break-word;
 }
@@ -65,7 +71,7 @@ footer {
     padding: 25px 50px;
 }
 
-input[type=text].to-do {
+input[type=text].question {
     background-color: var(--background-color);
     color: var(--color);
     font-family: monospace;
@@ -78,7 +84,7 @@ input[type=text].to-do {
     padding: 10px;
 }
 
-div.to-do {
+div.question {
     background-color: var(--random-color);
     width: 60%;
     padding: 10px;
@@ -87,56 +93,8 @@ div.to-do {
 button {
     -webkit-tap-highlight-color: transparent;
     background-color: var(--random-color);
+    color: var(--background-color);
     border: none;
     cursor: pointer;
-    width: 50px;
-    height: 50px;
-}
-
-button.minus::before, button.plus::before {
-    position: absolute;
-    background-color: var(--background-color);
-    content: '';
-    height: 6px;
-    width: 24px;
-    transform: translate(-50%, -50%);
-}
-
-button.plus::after {
-    position: absolute;
-    background-color: var(--background-color);
-    content: '';
-    height: 24px;
-    width: 6px;
-    transform: translate(-50%, -50%);
-}
-
-button:hover {
-    animation: roundOutter 2s 1;
-}
-
-button:hover::before {
-    animation: roundInner 2s 1;
-}
-
-button:hover::after {
-    animation: roundInner 2s 1;
-}
-
-@keyframes roundOutter {
-  10% {
-    border-radius: 50%;
-  }
-  100% {
-    border-radius: 0%;
-  }
-}
-
-@keyframes roundInner {
-  10% {
-    border-radius: 3px;
-  }
-  100% {
-    border-radius: 0px;
-  }
+    padding: 10px;
 }
