--- a/random/create-a-question/index.css
+++ b/random/create-a-question/index.css
@@ -21,9 +21,8 @@ h6 {
     margin: 0px;
 }
 
-div.question h2,
-h4 {
-    color: var(--background-color);
+div.question h2 {
+    color: var(--random-color);
     word-wrap: break-word;
 }
 
@@ -85,7 +84,7 @@ input[type=text].question {
 }
 
 div.question {
-    background-color: var(--random-color);
+    border: 1px solid var(--random-color);
     width: 60%;
     padding: 10px;
 }
@@ -96,5 +95,5 @@ button {
     color: var(--background-color);
     border: none;
     cursor: pointer;
-    padding: 10px;
+    padding: 20px;
 }
