--- a/index.css
+++ b/index.css
@@ -12,7 +12,12 @@ body {
     margin: 0px;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0px;
 }
 
@@ -69,8 +74,8 @@ div.color {
 }
 
 div.color-text {
-  display: none;
-  padding: 0px 10px
+    display: none;
+    padding: 0px 10px
 }
 
 div.color-text:hover {
@@ -141,7 +146,7 @@ input[type=range].slider {
 }
 
 input[type=range].slider:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 input[type=range].slider::-webkit-slider-thumb {
@@ -186,8 +191,7 @@ button.theme {
     font-family: monospace;
     border: none;
     cursor: pointer;
-    width: 20%;
-    padding: 10px;
+    padding: 10px 20px;
 }
 
 button.theme:hover {
@@ -196,12 +200,14 @@ button.theme:hover {
 
 @keyframes jiggle {
     25% {
-      transform: translateX(2px);
+        transform: translateX(2px);
     }
+
     75% {
-      transform: translateX(-2px);
+        transform: translateX(-2px);
     }
+
     100% {
-      transform: translateX(0px);
+        transform: translateX(0px);
     }
-  }
+}
